<resources>
    <string name="app_name">Gorjaw</string>
    <string name="step">20 %</string>
    <string name="step2">40 %</string>
    <string name="step3">60 %</string>
    <string name="step4">80 %</string>
    <string name="step5">100 %</string>
    <string name="lamp">Çyra</string>
    <string name="curtain">Perde</string>
    <string name="air">Howa Sazlaýjy</string>
    <string name="inTemp">22 ℃</string>
    <string name="time">1:05</string>
    <string name="tv">Akylly TV</string>
    <string name="stove">Ojak</string>
    <!--    <string name="welcome">Salam Emran</string>-->
    <string name="add_device">Enjam goş</string>
    <string name="inactive">Işjeň däl</string>
    <string name="gas">GAZ</string>
    <string name="electric">Elektrik TOK</string>
    <string name="water">SUW</string>
    <string name="device_dashboard"><![CDATA[Enjam & Gurallar]]></string>
    <string name="recent_devices">Işjeň Enjamlar</string>
    <string name="test_num">187.52</string>
    <string name="litre">Litr</string>
    <string name="test_num2">534.24</string>
    <string name="kwt">Wt</string>
    <string name="test_num3">0.00</string>
    <string name="cubic_meter">m³</string>
    <string name="edit">Sazla</string>

    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="current_temp">22℃</string>

    <string name="remote_control">Aralykdan dolandyryjy</string>
    <string name="ok">OK</string>
    <string name="channel">Ýaýlym</string>
    <string name="volume">Ses</string>
    <string name="timer">Wagt</string>
    <string name="menu">Menýu</string>
    <string name="exit">Yza</string>
    <string name="record">Ýazgy</string>
    <string name="mute">Sessiz</string>

    <string name="curtain_system">Perde Ulgamy</string>
    <string name="desc_curtain">El hereketiniň kömegi bilen perdäni dolandyryp bolar</string>

    <string name="desc_stove">Islendik bir ýakylan ojagyň gyzgynlyk derejesini sazlap bolar</string>
    <string name="stove_system">Ojak Ulgamy</string>

    <string name="stove_a">Ojak A</string>
    <string name="stove_b">Ojak B</string>
    <string name="noInternet">Internet baglanyşygy ýok. Internete baglanyň we täzeden synanyşyň</string>
    <string name="OK">Tamam</string>
    <string name="granted">Rugsat berildi!</string>
    <string name="notGranted">Rugsat berilmedi</string>
    <string name="result">Netije</string>
    <string name="userAdded">Täze ulanyjy goşuldy</string>
    <string name="flashLed">Çyrajygy ýakmak üçin, Ses Aç düwmesine basyň</string>
    <string name="notQRCode">Nädogry QR Code!</string>
    <string name="notCheckQRCode">QR Code skanirlenmedi</string>
    <string name="updateData">Updating data…</string>
    <string name="securitySys">Gorag Ulgamy</string>
    <string name="password">Şahsy kod</string>
    <string name="confirm">Tassykla</string>
    <string name="cancel">Ýatyr</string>
    <string name="tryAgain">Täzeden synanyş</string>
    <string name="waterLeaked">Suw agdy</string>
    <string name="waterPumpClosed">Esasy suw bekediji ýapyldy</string>
    <string name="percent0">0%</string>
    <string name="percent25">25%</string>
    <string name="percent50">50%</string>
    <string name="percent75">75%</string>
    <string name="percent100">100%</string>
    <string name="infoUpdating">Biraz Garaşyň! Maglumatlar ýüklenilýär…</string>
    <string name="IDUpdated">ID täzelendi</string>
    <string name="command">Buýruk</string>
    <string name="m5">M: 5</string>
    <string name="fillPlace">Boşlugy dolduryň!</string>
    <string name="dry">gurak</string>
    <string name="cold">sowuk</string>
    <string name="heat">gyzgyn</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="data">Maglumat</string>
    <string name="temperatura">Temperatura</string>
    <string name="option">Tertip</string>
    <string name="speed">Tizlik</string>
    <string name="powers">Güýç</string>
    <string name="power">Ýak/Öçür</string>
    <string name="dan">-dan</string>
    <string name="to">çenli</string>
    <string name="wastedEnergy">Sarp edilen (Tok)</string>
    <string name="energyPrice">Elektrik tok Baha</string>
    <string name="tmt0">0 TMT</string>
    <string name="timeToday">14:30 pm</string>
    <string name="kwt21">2.1 kWt</string>
    <string name="medium">ortaça</string>
    <string name="_18_00_pm">18:00 pm</string>
    <string name="airDesc">Howa ulgamy awtonom görnüşinde işläp biler</string>
    <string name="airSys">Howa Ulgamy</string>
    <string name="_21_40_pm">21:40 pm</string>
    <string name="_8_30_pm">8:30 pm</string>
    <string name="settings2">Sazlama 2</string>
    <string name="settings1">Sazlama 1</string>
    <string name="function">Tertip</string>
    <string name="lights">Ýagtylandyryş</string>
    <string name="_2_1_kwt">2.1 kWt</string>
    <string name="securityDesc">Gorag ulgamy awtonom görnüşinde işläp biler</string>
    <string name="FUNCTION">Funksiýa</string>
    <string name="ordinary">Adaty</string>
    <string name="police">Polisiýa</string>
    <string name="fire">Ýangyn</string>
    <string name="panic">Panik</string>
    <string name="secure">Goragly</string>
    <string name="secureSys">Gorag ulgamy awtonom görnüşinde işläp biler</string>
    <string name="waterValve">Suw bekediji</string>
    <string name="gasValve">Gaz bekediji</string>
    <string name="deviceRow">Enjam hatar</string>
    <string name="pir">PIR</string>
    <string name="_0">0</string>
    <string name="gerKon">Gerkon</string>
    <string name="door">Gapy</string>
    <string name="acceptUser">Kabul ediji</string>
    <string name="_61111110">61111110</string>
    <string name="sms_activator">SMS Activator</string>
    <string name="dataLoop">M.Dolanyşyk</string>
    <string name="notify">Bellik: M.Dolanyşyk 10000 (ms) köp bolmaly däl! \n Sazlamalary üýtgetmek üçin Sazlamalar sahypasyny terk ediň!</string>
    <string name="note">Bellikler</string>
    <string name="devices">Enjamlar</string>
    <string name="activeInactive">Işjen we işjeň däl</string>
    <string name="conditioner">Kondisioner</string>
    <string name="noTime">_ _ : _ _</string>
    <string name="socket">Rozetka</string>
    <string name="toHome">Öýe</string>
    <string name="defaultIP">192.168.1.101</string>
    <string name="port">5000</string>
    <string name="esp">esp</string>
    <string name="null_or_iot">Null or iot/</string>
    <string name="jsToArg">JsonToArg</string>
    <string name="http">http</string>
    <string name="ip_address">IP-Address</string>
    <string name="PORT">PORT</string>
    <string name="first_param">First Parameter</string>
    <string name="null_param">Null Parameter</string>
    <string name="second_param">Second Parameter</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
</resources>